tests/reference/asr-kind_var_of_int-1199f59.stderr
semantic error: Parameter 'a' is a variable, which does not reduce to a constant expression
 --> tests/errors/kind_var_of_int.f90:4:10
  |
4 |     real(a) :: x
  |          ^ 
